atualização de exercícios logica

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Exercícios/Exercícios Lógica Lucas/porcentagemVotos/script.js
 Exercícios/Exercícios Lógica Lucas/porcentagemVotos/style.css
 Exercícios/Exercícios Lógica Lucas/numero100/index.html
 Exercícios/Exercícios Lógica Lucas/numero100/index.html
+Exercícios/Exercícios Lógica Lucas/sequenciaInvertida/index.html
+Exercícios/Exercícios Lógica Lucas/sequenciaInvertida/script.js
+Exercícios/Exercícios Lógica Lucas/sequenciaInvertida/style.css
